--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 version '0.1.0-SNAPSHOT'
 
 buildscript {
-    ext.kotlin_version = '1.1.4-3'
+    ext.kotlin_version = '1.2.41'
 
     repositories {
         mavenCentral()
