--- a/build.gradle
+++ b/build.gradle
@@ -2,9 +2,11 @@ apply plugin: 'groovy'
 apply plugin: 'java'
 
 sourceCompatibility = 11
+targetCompatibility = 11
 
 repositories {
     mavenCentral()
+    mavenLocal()
 }
 
 dependencies {
